# OpenGL

./: .gitmodules  CMakeLists.txt  Input.h  Window.cpp  Window.h  main.cpp
shaders/: fragmentTriangle.glsl
src/: Input.cpp  ShaderCompiler.cpp  ShaderCompiler.h  Triangle.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h  main.cpp
